# raylib-haskell

./: .ghci  .gitignore  README.md  Setup.hs  bind_plan.org  gen_c2hs.sh  notes.org  raylib-haskell.cabal  stack.yaml
app/: Main.hs
cbits/: core.c  core.h  internal.c  internal.h  models.c  models.h  shapes.c  shapes.h  text.c  text.h  textures.c  textures.h  types.c  types.h
code_generator/: Main.hs  raylib.txt
examples/: 3DMode.hs  Cubesmap.hs
raylib/: README.txt
raylib/src/: Makefile
src/: Colors.hs  Core.hs  Core.hsc  Internal.hsc  Keys.hsc  Lib.chs  Lib.hs  Models.hsc  Mvp.hs  Shapes.hs  Shapes.hsc  Text.hsc  Textures.hsc  Types.hs  Types.hsc  Utils.hs  wrapper.c  wrapper.h
src/Internal/: Bindings.chs  Core.chs  Mvp.c  Mvp.chs  Mvp.h  Shapes.chs  Structs.chs  Types.c  Types.chs  Types.h  cbits.c  cbits.h  core_wrapper.c  core_wrapper.h  structs_wrapper.c  structs_wrapper.h
src_being_refactored/: Shapes.hs
src_being_refactored/Internal/: Types.chs  core_wrapper.c  core_wrapper.h  types_wrapper.c  types_wrapper.h
src_c2hs/Internal/: Utils.hs  cbits.h
src_old/: wrapper.c  wrapper.h
test/: Spec.hs
