name:                   raylib-haskell
version:                0.1.0.0
build-type:             Custom
cabal-version:          >=2.0
-- synopsis:
-- description:
-- author:
-- license:
-- license-file:
-- copyright:

custom-setup
  setup-depends:        base
                      , Cabal

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  c-sources:            src/wrapper.c
  include-dirs:         raylib/release/include
                        src
  extra-lib-dirs:       /home/buttons/Code/haskell/raylib-haskell/raylib/release/libs/linux
  extra-libraries:      raylib
  exposed-modules:      Lib
  ghc-options:          -Wall
                        -Werror
                        -Wmissing-import-lists
                        -Wcompat
                        -Wnoncanonical-monad-instances
                        -Wnoncanonical-monadfail-instances
                        -fdefer-typed-holes
  pkgconfig-depends:    gl
                      , x11
  build-depends:        base

executable raylib-haskell
  default-language:     Haskell2010
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -Wall
                        -Werror
                        -Wmissing-import-lists
                        -Wcompat
                        -Wnoncanonical-monad-instances
                        -Wnoncanonical-monadfail-instances
                        -threaded
                        -fdefer-typed-holes
  build-depends:        base
                      , raylib-haskell

test-suite tests
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  ghc-options:          -Wall
                        -Werror
                        -Wmissing-import-lists
                        -Wcompat
                        -Wnoncanonical-monad-instances
                        -Wnoncanonical-monadfail-instances
                        -threaded
                        -fdefer-typed-holes
  build-depends:        base
                      , raylib-haskell
