name:                   raylib-haskell
version:                0.1.0.0
build-type:             Simple
cabal-version:          >=2.0
-- synopsis:
-- description:
-- author:
-- license:
-- license-file:
-- copyright:

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  cc-options:           -DPLATFORM_DESKTOP -D_GLFW_X11
  c-sources:            src/Internal/core_wrapper.c
                        src/Internal/types_wrapper.c
                        raylib/src/rglfw.c
                        raylib/src/shapes.c
                        raylib/src/text.c
                        raylib/src/textures.c
                        raylib/src/utils.c
                        raylib/src/core.c
  include-dirs:         src/Internal
                        raylib/src
                        raylib/src/external
                        raylib/src/external/glfw/include
  exposed-modules:      Core
                        Types
                        Internal.Types
                        Internal.Core
  ghc-options:          -Wall
                        --Werror
                        -Wmissing-import-lists
                        -Wcompat
                        -Wnoncanonical-monad-instances
                        -Wnoncanonical-monadfail-instances
                        -fdefer-typed-holes
  pkgconfig-depends:    gl
                      , x11
  build-depends:        base

executable raylib-haskell
  default-language:     Haskell2010
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -Wall
                        --Werror
                        -Wmissing-import-lists
                        -Wcompat
                        -Wnoncanonical-monad-instances
                        -Wnoncanonical-monadfail-instances
                        -threaded
                        -fdefer-typed-holes
  build-depends:        base
                      , raylib-haskell

test-suite tests
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  ghc-options:          -Wall
                        --Werror
                        -Wmissing-import-lists
                        -Wcompat
                        -Wnoncanonical-monad-instances
                        -Wnoncanonical-monadfail-instances
                        -threaded
                        -fdefer-typed-holes
  build-depends:        base
                      , raylib-haskell
